# deepdrive_kai0

./: .gitignore  CLAUDE.md  install.sh  setup_env.sh
calib/: piper_fk.py  verify_calibration.py
config/: calibration.yml  pipers.yml
docs/: build_web_venv.md  inference_visualization.md  project_complete_guide.md  taskE_master_plan.md  teleop_quickstart.md  teleoperation_guide.md
piper_tools/: setup_can.sh  verify_can_mapping.py
ros2_ws/src/piper/: CMakeLists.txt
ros2_ws/src/piper/launch/: autonomy_launch.py  inference_full_launch.py  master_handle_launch.py  playback_launch.py  replay_launch.py  teleop_launch.py
ros2_ws/src/piper/scripts/: _bg_builder.py  arm_reader_node.py  arm_teleop_node.py  joint_state_loopback_node.py  master_handle_node.py  multi_camera_node.py  piper_read_master_node.py  piper_start_master_node.py  piper_start_master_node_debug.py  piper_start_ms_node.py  piper_start_ms_node_new.py  piper_start_slave_node.py  policy_inference_node.py  replay_node.py  rerun_viz_node.py  video_publisher_node.py
scripts/: _print_mae.py  auto_eval_v2.sh  check_task_e_progress.py  eval_val_action_mse.py  generate_episodes_stats.py  ma_average.py  start_autonomy.sh  start_infer_vis.sh  start_policy_node.sh  start_task_e_4gpu.sh  start_teleop.sh  start_train.sh  test_integration_ros2.py  to_tos_file.py
start_scripts/: launch_3cam.py  launch_e2e_test.py  start_autonomy.sh  start_autonomy_temp.sh  start_autonomy_v1.sh  start_data_collect.sh  start_policy_node.sh  start_policy_node_v1.sh  start_replay_stack.sh  start_replay_test.sh  start_serve_v1.sh  (+7 more)
(+160 files in other folders)
